--- a/deployment/environments/group_vars/all/cots_vars.yml
+++ b/deployment/environments/group_vars/all/cots_vars.yml
@@ -30,6 +30,8 @@ elasticsearch:
             default:
                 shards: 1
                 replica: 1
+            packetbeat:
+                shards: 5
         log_appenders:
             root:
                 log_level: "info"
