Fix: now acceptableRequestTime is a param for each vitam component and can be adjusted

--- a/deployment/environments/group_vars/all/extra_vars.yml
+++ b/deployment/environments/group_vars/all/extra_vars.yml
@@ -25,6 +25,7 @@ vitam:
         performance_logger: "false"
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     library:
         vitam_component: library
         host: "library.service.{{consul_domain}}"
@@ -41,6 +42,7 @@ vitam:
         performance_logger: "false"
         consul_check_business: 30 # value in seconds
         consul_admin_check: 30 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
 
 
 # Period units in seconds
