Manual cherry-pick MR6471 on R10 doc fix

--- a/deployment/environments/group_vars/all/extra_vars.yml
+++ b/deployment/environments/group_vars/all/extra_vars.yml
@@ -26,6 +26,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     library:
         vitam_component: library
         host: "library.service.{{consul_domain}}"
@@ -43,6 +44,7 @@ vitam:
         reconstruction:
         consul_check_business: 30 # value in seconds
         consul_admin_check: 30 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
 
 # Period units in seconds
 metricbeat:
