--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -144,6 +144,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     accessinternal:
         vitam_component: access-internal
         host: "access-internal.service.{{ consul_domain }}"
@@ -162,6 +163,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     functional_administration:
         vitam_component: functional-administration
         host: "functional-administration.service.{{ consul_domain }}"
@@ -181,6 +183,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     elastickibanainterceptor:
         vitam_component: elastic-kibana-interceptor
         host: "elastic-kibana-interceptor.service.{{ consul_domain }}"
@@ -200,6 +203,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     batchreport:
         vitam_component: batch-report
         host: "batch-report.service.{{ consul_domain }}"
@@ -218,6 +222,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     ingestexternal:
         vitam_component: ingest-external
         # DNS record for the service:
@@ -253,6 +258,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     ingestinternal:
         vitam_component: ingest-internal
         host: "ingest-internal.service.{{ consul_domain }}"
@@ -271,6 +277,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     ihm_demo:
         vitam_component: ihm-demo
         host: "ihm-demo.service.{{ consul_domain }}"
@@ -317,6 +324,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     logbook:
         vitam_component: logbook
         host: "logbook.service.{{ consul_domain }}"
@@ -344,6 +352,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     metadata:
         vitam_component: metadata
         host: "metadata.service.{{ consul_domain }}"
@@ -370,6 +379,7 @@ vitam:
         # Archive Unit Profile cache settings (max entries in cache & retention timeout in seconds)
         archiveUnitProfileCacheMaxEntries: 100
         archiveUnitProfileCacheTimeoutInSeconds: 300
+        acceptableRequestTime: 10 # value in seconds
     processing:
         vitam_component: processing
         host: "processing.service.{{ consul_domain }}"
@@ -390,6 +400,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     security_internal:
         vitam_component: security-internal
         host: "security-internal.service.{{ consul_domain }}"
@@ -408,6 +419,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
     storageengine:
         vitam_component: storage
         host: "storage.service.{{ consul_domain }}"
@@ -438,6 +450,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 60 # value in seconds
     storageofferdefault:
         vitam_component: "offer"
         port_service: 9900
@@ -455,6 +468,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 60 # value in seconds
     worker:
         vitam_component: worker
         port_service: 9104
@@ -472,6 +486,7 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 60 # value in seconds
     workspace:
         vitam_component: workspace
         host: "workspace.service.{{ consul_domain }}"
@@ -490,3 +505,4 @@ vitam:
         reconstruction:
         consul_check_business: 10 # value in seconds
         consul_admin_check: 10 # value in seconds
+        acceptableRequestTime: 10 # value in seconds
