Now force version for logstash using vitam-logstash

--- a/deployment/ansible-vitam/roles/logstash/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/logstash/tasks/main.yml
@@ -43,7 +43,7 @@
 
 - name: Install logstash package from repo
   package:
-    name: logstash
+    name: vitam-logstash
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
