Item 5853 fix xml vulnérability

--- a/sources/functional-administration/functional-administration-profile/pom.xml
+++ b/sources/functional-administration/functional-administration-profile/pom.xml
@@ -59,6 +59,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.thaiopensource</groupId>
+            <artifactId>jing</artifactId>
+        </dependency>
+        <dependency>
             <groupId>fr.gouv.vitam</groupId>
             <artifactId>common-junit</artifactId>
             <version>${project.version}</version>
