--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/tasks/pre_migration.yml
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/tasks/pre_migration.yml
@@ -9,3 +9,4 @@
     body: "{ \"persistent\": { \"cluster.routing.allocation.enable\": \"none\" }}"
     body_format: json
     status_code: 200,201
+  when: ansible_facts.services["vitam-{{ composant.cluster_name }}.service"].state == "running"
