bug 5931 - fixing sonar issues

--- a/sources/ihm-recette/ihm-recette-web-application/src/test/resources/ihm-recette.conf
+++ b/sources/ihm-recette/ihm-recette-web-application/src/test/resources/ihm-recette.conf
@@ -15,8 +15,8 @@ testSystemSipDirectory: ""
 testSystemReportDirectory: ""
 ingestMaxThread: 4
 workspaceUrl : http://localhost:8094
-sipDirectory: ""
-performanceReportDirectory: ""
+sipDirectory: /tmp
+performanceReportDirectory: /tmp
 mongoDbNodes:
   - dbHost: localhost
     dbPort: 27017
