Bug 5966 fix slave mode on archive unit profile

--- a/sources/integration-test/src/test/resources/common/functional-administration.conf
+++ b/sources/integration-test/src/test/resources/common/functional-administration.conf
@@ -22,9 +22,11 @@ listEnableExternalIdentifiers:
        - ACCESS_CONTRACT
        - INGEST_CONTRACT
        - PROFILE
+       - ARCHIVE_UNIT_PROFILE
   1:
        - CONTEXT
        - SECURITY_PROFILE
        - ACCESS_CONTRACT
        - INGEST_CONTRACT
        - PROFILE
+       - ARCHIVE_UNIT_PROFILE
