--- a/deployment/environments/group_vars/all/offers_opts.yml.example
+++ b/deployment/environments/group_vars/all/offers_opts.yml.example
@@ -44,6 +44,8 @@ vitam_offers:
       # Enable overriding non empty cartridges
       # WARNING : FOR DEV/TEST ONLY. DO NOT ENABLE IN PRODUCTION.
       forceOverrideNonEmptyCartridges: false
+      # Archive (Tar) file expire time for retention in local FS
+      archiveRetentionCacheTimeoutInMinutes: 30
 
       useSudo: false
     topology:
