--- a/sources/storage-integration-multi-offers/src/test/resources/storage-test/storage-engine.conf
+++ b/sources/storage-integration-multi-offers/src/test/resources/storage-test/storage-engine.conf
@@ -6,3 +6,6 @@ p12LogbookFile: tsa.p12
 storageTraceabilityOverlapDelay: 300
 offerSynchronizationBulkSize: 50
 offerSyncThreadPoolSize: 16
+offerSyncNumberOfRetries: 3
+offerSyncFirstAttemptWaitingTime: 15
+offerSyncWaitingTime: 30
