--- a/vitam-conf-dev/conf/storage/storage.conf
+++ b/vitam-conf-dev/conf/storage/storage.conf
@@ -12,6 +12,9 @@ maxBatchThreadPoolSize: 16
 batchDigestComputationTimeout: 300
 offerSynchronizationBulkSize: 1000
 offerSyncThreadPoolSize: 32
+offerSyncNumberOfRetries: 3
+offerSyncFirstAttemptWaitingTime: 15
+offerSyncWaitingTime: 30
 
 #Basic Authentication
 adminBasicAuth:
