Fix for ADAMANT : do not check remote offer

--- a/deployment/ansible-vitam/roles/checks/tasks/check_strategies_offers.yml
+++ b/deployment/ansible-vitam/roles/checks/tasks/check_strategies_offers.yml
@@ -4,7 +4,7 @@
 
     - name: check if defined offer is defined in vitam_strategy
       fail: msg="{{ item.name }} not configured in vitam_offers"
-      when: vitam_offers[item.name].provider is undefined
+      when: vitam_offers[item.name].provider is undefined and item.distant is undefined
       with_items:
         - "{{ vitam_strategy }}"
 
