--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -107,6 +107,7 @@
         <commons-io.version>2.6</commons-io.version>
         <commons-lang3>3.8.1</commons-lang3>
         <easymock.version>4.0.2</easymock.version>
+        <jackson-databind.version>2.9.9.2</jackson-databind.version>
         <jackson.version>2.9.9</jackson.version>
         <elasticsearch.version>6.8.1</elasticsearch.version>
         <elasticsearch.client.transport.version>${elasticsearch.version}</elasticsearch.client.transport.version>
@@ -960,7 +961,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson-databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.module</groupId>
