--- a/deployment/ansible-vitam/roles/vitam/handlers/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/handlers/main.yml
@@ -1,13 +1,9 @@
 ---
-# handlers file for common
+
+- name: restart service
+  import_tasks: tasks/restart_service.yml
+
 - name: reload consul configuration
   service:
     name: "vitam-{{consul_component}}"
     state: reloaded
-
-- name: restart service
-  service:
-    name: "{{ package_name }}"
-    state: restarted
-  when: ( primary_site | lower == "true" ) or
-        ( vitam_struct.vitam_component in vitam_secondary_site_components )
