--- a/deployment/environments/group_vars/all/cots_vars.yml
+++ b/deployment/environments/group_vars/all/cots_vars.yml
@@ -14,6 +14,10 @@ consul_remote_sites:
     #   wan: ["10.10.10.10","1.1.1.1"]
     # - dc3:
     #   wan: ["10.10.10.11","1.1.1.1"]
+# Please uncomment and fill values if you want to connect VITAM to external SIEM
+# external_siem:
+#     host:
+#     port:
 
 elasticsearch:
     log:
